# RLonSpot

./: .gitignore  README.md  guide_mv_file_to_spot.txt
bt_ros_spot/: package.xml  requirements.txt  setup.py
bt_ros_spot/graphnavs/: graph
bt_ros_spot/graphnavs/edge_snapshots/: edge_snapshot_id_anemic-hyena-AH5gf3kBn7itkqL5ZFRkrw==  edge_snapshot_id_bats-goat-w8zfvFHNrg968Lvv0nL0OA==  edge_snapshot_id_bosky-baboon-VocGb37fiIM1q94fajrA2g==  edge_snapshot_id_foxy-aphid-QQ1a1+kLA7vwe.Z7Ibc.EQ==  edge_snapshot_id_laic-osprey-LuuaqEKXPTjkuLI8J8vzXQ==  edge_snapshot_id_leal-rabbit-pZcuT2Y01fRpCegzIXtOmg==  edge_snapshot_id_maniac-mantis-Jf.oGjFTtcLzNbRGaSQQbQ==  edge_snapshot_id_milky-lapdog-R.9LSd1.OXWY0lAQm3UJbg==  edge_snapshot_id_musky-magpie-VW6ilw3zRVZPpkdyRXtuYQ==  edge_snapshot_id_plush-howler-8FQfWgsPFIG4ioID8kdong==  edge_snapshot_id_regent-emu-l1g1xfoOfIcDWZXxi1xrag==  edge_snapshot_id_rimmed-zebra-IHz+pjeZ7Ep3vZeuNOQVEw==  edge_snapshot_id_sleety-cuscus-ih7QY2uZG49h.CJ25UduIg==  edge_snapshot_id_sought-pigeon-c1WctS8jGGs376RRhvhN.g==  edge_snapshot_id_spry-prawn-qaWRF1VjWQYt1V7YGKENew==  edge_snapshot_id_whiny-chimp-yFSKOKA.aLlBLLZ5lb0d6A==
bt_ros_spot/graphnavs/waypoint_snapshots/: snapshot_enatic-krill-eRSfJZiNDrOehqNJR9f0tw==  snapshot_garbed-tern-21KVOFl9KTKqpF6o1Q.lWQ==  snapshot_legato-dassie-qCHuItJE7GeCrL+8fVLFAA==  snapshot_metric-shrimp-sWxuO7o7HY.LFnIcsRxhTw==  snapshot_nasal-cocoon-bOJ+K0YpaH8QOJOfDQtrCA==  (+9 more)
bt_ros_spot/launch/: bt_test.launch.py  test_config.yaml
bt_ros_spot/spot_bt_test/: demo_arm.py  graphnav_test.py
exported/: policy.onnx  (+1 more)
(+111 files in other folders)
