<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_bt_test</name>
  <version>0.0.1</version>
  <description>Testing Spot ROS BT</description>
  <maintainer email="sundtfredrik@gmail.com">sundtlejon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>spot_bt_ros_msgs</depend>
  <depend>spot_bt_ros_node</depend>
  <depend>spot_bt_ros_py</depend>
  <depend>spot_bt_ros_cpp</depend>
  <depend>spot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
